--- a/tabspanel/index.html
+++ b/tabspanel/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Word</title>
 	<meta charset="utf-8"/>
-	<script type="text/javascript" src="JS/TabsPanel.min.js" async></script>
-	<link rel="stylesheet" type="text/css" href="CSS/TabsPanel.min.css"/>
+	<script type="text/javascript" src="js/TabsPanel.js" async></script>
+	<link rel="stylesheet" type="text/css" href="css/TabsPanel.css"/>
 </head>
 <body>
 
