--- a/p/index.html
+++ b/p/index.html
@@ -15,17 +15,17 @@
     <link rel="stylesheet" href="code/src/avatar/avatar.css">
     <link rel="stylesheet" href="code/src/button/button.css">
     <link rel="stylesheet" href="code/src/content/content.css">
-    <link rel="stylesheet" href="code/src/_dropdown/dist/css/dropdown.min.css">
+    <link rel="stylesheet" href="code/src/dropdown/dist/css/dropdown.min.css">
     <link rel="stylesheet" href="code/src/icon/icon.css">
     <link rel="stylesheet" href="code/src/input/input.css">
     <link rel="stylesheet" href="code/src/list/list.css">
-    <link rel="stylesheet" href="code/src/_overlay/dist/css/overlay.min.css">
+    <link rel="stylesheet" href="code/src/overlay/dist/css/overlay.min.css">
     <link rel="stylesheet" href="code/src/preloader/preloader.css">
     <link rel="stylesheet" href="code/src/sidebar/sidebar.css">
     <link rel="stylesheet" href="code/src/tabs/tabs.css">
     <link rel="stylesheet" href="code/src/text/text.css">
     <link rel="stylesheet" href="code/src/textarea/textarea.css">
-    <link rel="stylesheet" href="code/src/_up/dist/css/up.min.css">
+    <link rel="stylesheet" href="code/src/up/dist/css/up.min.css">
 </head>
 <body>
 
@@ -726,13 +726,13 @@
 
     <script src="code/src/elements/elements.js"></script>
     <script src="code/src/content/content.js"></script>
-    <script src="code/src/_dropdown/dist/js/dropdown.min.js"></script>
+    <script src="code/src/dropdown/dist/js/dropdown.min.js"></script>
     <!-- <script src="blocks/form/form.js"></script> -->
     <script src="code/src/onbottom/onbottom.js"></script>
-    <script src="code/src/_overlay/dist/js/overlay.min.js"></script>
+    <script src="code/src/overlay/dist/js/overlay.min.js"></script>
     <script src="code/src/tabs/Tabs.js"></script>
     <script src="code/src/textarea/autosize.min.js"></script>
-    <script src="code/src/_up/dist/js/up.min.js"></script>
+    <script src="code/src/up/dist/js/up.min.js"></script>
 
     <script>
         dropdown();
